--- a/Main.html
+++ b/Main.html
@@ -5,15 +5,18 @@
   		<title>My Fist Game</title>
 
         <!--Scripts-->
+        <link rel="stylesheet" type="text/css" href="Style.css">
   		<script src="Sprite.js"  charset="utf-8" ></script>
-      <script src="Enemy.js"  charset="utf-8" ></script>
+        <script src="Enemy.js"  charset="utf-8" ></script>
   		<script src="Level.js"  charset="utf-8" ></script>
   		<script src="ImageLoader.js"  charset="utf-8" ></script>
   		<script src="AudioLoader.js"  charset="utf-8" ></script>
 
 	</head>
 	<body>
-  		<canvas width="500" height="720"></canvas>
+	  <div id="container">
+  		<canvas width="1000" height="720"></canvas>
+  	  </div>  
   		<script>
 
         var tela = document.getElementsByTagName("canvas")[0];
@@ -23,6 +26,7 @@
         imgLoad.load("player","Assets/Naves/F5S4.png");
         imgLoad.load("enemy","Assets/Naves/F5S2N.png");
         imgLoad.load("shot","Assets/Efeitos/shot.png");
+        imgLoad.load("background","Cenarios/fundo.jpg")
 
         var audLoad = new AudioLoader();
         audLoad.load("shot","Audios/Missle_Launch.mp3")
@@ -33,7 +37,8 @@
         var anterior = new Date();
         var dt = 1/fps;
 
-        var player = new Sprite(250,680);
+        var player = new Sprite(500,680);
+        var background = new Sprite(0,0);
         var level = new Level()
         var energy = 100;
         var score = 0;
@@ -58,12 +63,12 @@
         	dt = (atual - anterior)/1000;
         	ctx.clearRect(0,0,tela.width, tela.height)
         	ctx.strokeRect(0,0,tela.width, tela.height)
-
+            ctx.drawImage(imgLoad.images["background"],0,0,tela.width,tela.height);
         //HUD	
-        	ctx.fillStyle = "darkgreen";
-        	ctx.font="10px";
-        	ctx.fillText("dt: "+dt+" fps:"+Math.floor(1/dt), 10, 10);
-        	ctx.fillText("Score : " + score, 400, 10);
+            ctx.font = "40px Arial"      
+        	ctx.fillStyle = "white";
+        	ctx.fillText("dt: "+ dt +" fps:"+Math.floor(1/dt), 10, 30);
+        	ctx.fillText("Score : " + score, 800, 30);
             lifeBar(); 
            
 
@@ -103,7 +108,7 @@
 
        	}else{// game over
        		ctx.font="30px Verdana";
-       		ctx.fillText("Game Over",160,450);
+       		ctx.fillText("Game Over",430,450);
        	}
       }
 
@@ -113,6 +118,7 @@
       }
 
       function lifeBar(){
+      	ctx.fillStyle = "green"
       	if(energy < 50)
           	  ctx.fillStyle = "yellow";
   		if(energy < 30)
@@ -127,7 +133,7 @@
          	return	
         switch (e.keyCode) {
           case 13:
-            initGame();
+           // initGame();
           case 32:
             level.fire(player, audLoad, "shot", vol);
             break;
